feat: add get public poll by code
